--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1330,11 +1330,9 @@ td {
 
 .entrada:focus {
   outline: none;
-  border-color: #2563eb;
+  border: 1px solid #2563eb;
   /* azul elegante */
   box-shadow: 0 0 6px rgba(37, 99, 235, 0.4);
-  padding: 5px;
-  border: 1px solid #ccc;
   border-radius: 7px;
 }
 
