--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -652,6 +652,7 @@ li {
 
 .modulos-menu {
   padding-left: 10px;   /* desplaza todo el bloque a la derecha */
+  width: 100%;
 }
 
 .modulos-menu nav li {
