para cambios en Maintainability

--- a/frontend/src/reportes.css
+++ b/frontend/src/reportes.css
@@ -107,12 +107,12 @@
 
 .tag-active {
   background-color: #e6f7d9;
-  color: #389e0d;
+  color: #000;
 }
 
 .tag-inactive {
   background-color: #ffd8d8;
-  color: #cf1322;
+  color: #000;
 }
 
 @media (max-width: 768px) {
